--- a/templates/index.html
+++ b/templates/index.html
@@ -14,10 +14,10 @@
             </a>
         </div>
 		<div class="uos">
-			<img src="{{ url_for('static',filename='images/uos.jpg') }}" alt="University of southampton">
+			<img src="{{ url_for('static',filename='images/uos.JPG') }}" alt="University of southampton">
 		</div>
 		<div class="yzh">
-			<img src="static/images/yzh.jpg') }}" alt="Me and Yunzhen">
+			<img src="static/images/yzh.JPG') }}" alt="Me and Yunzhen">
 		</div>
     </div>
     <div class="containerspacer"></div>
