--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
 			<img src="{{ url_for('static',filename='images/uos.JPG') }}" alt="University of southampton">
 		</div>
 		<div class="yzh">
-			<img src="static/images/yzh.JPG') }}" alt="Me and Yunzhen">
+			<img src="{{ url_for('static',filename='images/yzh.JPG') }}" alt="Me and Yunzhen">
 		</div>
     </div>
     <div class="containerspacer"></div>
