--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,20 @@
 {% include 'base.html' %}
-	<body>
-		<a href="#top" class="arrow" aria-label="Back to top" title="Back to top">↑</a>
+<body>
+    
+<a href="#top" class="arrow" aria-label="Back to top" title="Back to top">↑</a>
 <div class="container">
     <div class="box1" id="section1">
         <div class="starter">
+            <script>
+                var username = prompt("Hello, who are you?");
+
+                if(username.toLowerCase()==="yunzhen") {
+                    document.write("<h1>Hello " + username[0].toUpperCase() + username.substring(1) + " I love you</h1>");
+                }
+                else {
+                     document.write("<h1>Hello " + username[0].toUpperCase() + username.substring(1) + ". I'm Harry</h1>");
+                }
+                </script>
             <h1>Hi. I'm Harry</h1>
             <div class="aboutme">
                 <p1>I'm an Msci Geology graduate from the University of Southampton looking to gain experience in the geology sector. Checkout my work on the <a href="/projects" style="text-decoration: none; color: inherit;">'Projects'</a> page or read more about me on the <a href="/about" style="text-decoration: none; color: inherit;">'About'</a> page. Feel free to get in touch with me below.</p1>
@@ -35,6 +46,5 @@
 <!-- JavaScript -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="{{ url_for('static',filename='lightbox/dist/js/lightbox.js') }}"></script>
-
 </body>
 </html>
