--- a/templates/index.html
+++ b/templates/index.html
@@ -12,10 +12,9 @@
                     document.write("<h1>Hello " + username[0].toUpperCase() + username.substring(1) + " I love you</h1>");
                 }
                 else {
-                     document.write("<h1>Hello " + username[0].toUpperCase() + username.substring(1) + ". I'm Harry</h1>");
+                     document.write("<h1>Hi " + username[0].toUpperCase() + username.substring(1) + ". I'm Harry</h1>");
                 }
-                </script>
-            <h1>Hi. I'm Harry</h1>
+                </script>   
             <div class="aboutme">
                 <p1>I'm an Msci Geology graduate from the University of Southampton looking to gain experience in the geology sector. Checkout my work on the <a href="/projects" style="text-decoration: none; color: inherit;">'Projects'</a> page or read more about me on the <a href="/about" style="text-decoration: none; color: inherit;">'About'</a> page. Feel free to get in touch with me below.</p1>
             </div><a href="#section2" style="text-decoration: none; color: inherit;">
