--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,8 @@
 <div class="container">
     <div class="box1" id="section1">
         <div class="starter">
-            <script>
+            <h1 id="name">Hi. I'm Harry</h1>
+            <!-- <script>
                 var username = prompt("Hello, who are you?");
 
                 if(username.toLowerCase()==="yunzhen") {
@@ -14,7 +15,7 @@
                 else {
                      document.write("<h1>Hi " + username[0].toUpperCase() + username.substring(1) + ". I'm Harry</h1>");
                 }
-                </script>   
+                </script>    -->
             <div class="aboutme">
                 <p1>I'm an Msci Geology graduate from the University of Southampton looking to gain experience in the geology sector. Checkout my work on the <a href="/projects" style="text-decoration: none; color: inherit;">'Projects'</a> page or read more about me on the <a href="/about" style="text-decoration: none; color: inherit;">'About'</a> page. Feel free to get in touch with me below.</p1>
             </div><a href="#section2" style="text-decoration: none; color: inherit;">
@@ -45,5 +46,16 @@
 <!-- JavaScript -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="{{ url_for('static',filename='lightbox/dist/js/lightbox.js') }}"></script>
+<script>
+    var edit = document.querySelector("#name");
+    var username = prompt("Hello, who are you?");
+
+    if(username.toLowerCase()==="yunzhen") {
+                    edit.innerHTML = ("<h1>Hello " + username[0].toUpperCase() + username.substring(1) + " I love you</h1>");
+                }
+                else {
+                    edit.innerHTML = ("<h1>Hi " + username[0].toUpperCase() + username.substring(1) + ". I'm Harry</h1>");
+                }
+</script>
 </body>
 </html>
