--- a/static/styles/projects.css
+++ b/static/styles/projects.css
@@ -55,11 +55,21 @@
     justify-content: center;
 }
 .home:hover{
-    background-color:rgb(167, 64, 64);
+    background-color:rgb(133, 51, 51);
 }
 .home h1{
     color:antiquewhite;
     font-family: 'Amaranth', sans-serif;
+}
+.home h1{
+    color:antiquewhite;
+    font-family: 'Amaranth', sans-serif;
+    transition: transform .2s;
+}
+.home h1:hover{
+    -ms-transform: scale(1.1); /* IE 9 */
+    -webkit-transform: scale(1.1); /* Safari 3-8 */
+    transform: scale(1.1); 
 }
 .about{
     height:50px;
@@ -69,11 +79,17 @@
     justify-content: center;
 }
 .about:hover{
-    background-color:rgb(167, 64, 64);
+    background-color:rgb(133, 51, 51);
 }
 .about h1{
     color: antiquewhite;
     font-family: 'Amaranth', sans-serif;
+    transition: transform .2s;
+}
+.about h1:hover{
+    -ms-transform: scale(1.1); /* IE 9 */
+    -webkit-transform: scale(1.1); /* Safari 3-8 */
+    transform: scale(1.1); 
 }
 .projects{
     border-top-right-radius: 10px;
@@ -84,11 +100,17 @@
     justify-content: center;
 }
 .projects:hover{
-    background-color:rgb(167, 64, 64);
+    background-color:rgb(133, 51, 51);
 }
 .projects h1{
     color: antiquewhite;
     font-family: 'Amaranth', sans-serif;
+    transition: transform .2s;
+}
+.projects h1:hover{
+    -ms-transform: scale(1.1); /* IE 9 */
+    -webkit-transform: scale(1.1); /* Safari 3-8 */
+    transform: scale(1.1); 
 }
 .name h1{
     text-align: center;
