Added email form

--- a/templates/index.html
+++ b/templates/index.html
@@ -72,7 +72,7 @@
         Email.send({
             SecureToken: "98a6e043-7391-4470-b539-af96eb3b32b5",
             To : "harrybonshormayes@gmail.com",
-            From : document.getElementById("Email").value,
+            From : "harrybonshormayes@gmail.com",
             Subject : document.getElementById("Name").value + " sent an emai from the website",
             Body : "Name: " + document.getElementById("Name").value
             + "<br> Email: " + document.getElementById("Email").value
