Added email form

--- a/templates/index.html
+++ b/templates/index.html
@@ -72,8 +72,8 @@
         Email.send({
             SecureToken: "6df11250-d898-4e41-87a3-4056db8b3c3b",
             To : "harrybonshormayes@gmail.com",
-            From : document.getElementById("Email").value,
-            Subject : document.getElementById("Name").value + " sent an emai from the website",
+            From : "harrybonshormayes@gmail.com",
+            Subject : document.getElementById("Name").value + " sent an email from the website",
             Body : "Name: " + document.getElementById("Name").value
             + "<br> Email: " + document.getElementById("Email").value
             + "<br> Phone Number: " + document.getElementById("phonenum").value
