--- a/templates/about.html
+++ b/templates/about.html
@@ -1,1 +1,20 @@
 {% include 'base.html' %}
+<body>
+    <div id="page">
+        <div id="container">
+            <span id="text1"></span>
+            <span id="text2"></span>
+        </div>
+    </div>
+    <svg id="filters">
+        <defs>
+            <filter id="threshold">
+                <feColorMatrix in="SourceGraphic" type="matrix" values="1 0 0 0 0
+                                        0 1 0 0 0
+                                        0 0 1 0 0
+                                        0 0 0 255 -140" />
+            </filter>
+        </defs>
+    </svg>
+    <script src="{{ url_for('static',filename='scripts/main.js') }}"></script>
+</body>
