--- a/static/styles/about.css
+++ b/static/styles/about.css
@@ -16,6 +16,14 @@
 ::-webkit-scrollbar-thumb:hover{
     background: rgb(185, 64, 64)
 }
+body{
+    background-color:rgb(255, 255, 255);
+    background-image: radial-gradient(
+        #dfdfdf1c 20px,
+        transparent 20px
+    );
+    background-size: 60px 60px;
+}
 .top_box{
     background-color: rgb(243, 206, 105);
     height:150px;
@@ -120,6 +128,32 @@
     font-weight: 900;
     font-size: 50px;
 }
-body{
-    background-color: rgb(248, 247, 245);
+@import url("https://fonts.googleapis.com/css?family=Raleway:900&display=swap");
+
+#page{
+    background-color: rgb(248, 248, 248);
+    display: flex;
+    width:110rem;
+    height:100%;
+    margin-inline: auto;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+#container {
+    width: 100%;
+    height: 100pt;
+    filter: url(#threshold) blur(0.6px);
+}
+#text1,
+#text2 {
+    position: absolute;
+    width: 100%;
+    display: inline-block;
+
+    font-family: "Raleway", sans-serif;
+    font-size: 70pt;
+
+    text-align: center;
+
+    user-select: none;
 }
