--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,6 @@
 <html>
 	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" type="image/x-icon" href="{{ url_for('static',filename='images/favicon.ico') }}">
 		<!-- FONT ADDITION -->
 		<link rel="preconnect" href="https://fonts.googleapis.com">
