--- a/templates/index.html
+++ b/templates/index.html
@@ -67,6 +67,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="{{ url_for('static',filename='lightbox/dist/js/lightbox.js') }}"></script>
 <script src="https://smtpjs.com/v3/smtp.js"></script>
+<!-- Email bit -->
 <script>
     function sendEmail(){
         Email.send({
@@ -77,12 +78,13 @@
             Body : "Name: " + document.getElementById("Name").value
             + "<br> Email: " + document.getElementById("Email").value
             + "<br> Phone Number: " + document.getElementById("phonenum").value
-            + "<br> Message: " + document.getElementById("message").value
+            + "<br> Message: " + document.getElementById("message").value 
         }).then(
         message => alert("Thanks for your message, I'll get back to you soon")
         );
     }
 </script>
+<!-- Login bit -->
 <script>
     var edit = document.querySelector("#name");
     var username = prompt("Hello, who are you?");
