--- a/static/styles/projects.css
+++ b/static/styles/projects.css
@@ -123,3 +123,8 @@
 body{
     background-color: rgb(248, 247, 245);
 }
+#testing{
+    width: 100rem;
+    height:100rem;
+    background-color:rgb(250, 235, 215);
+}
