--- a/templates/about.html
+++ b/templates/about.html
@@ -10,16 +10,19 @@
             <a href="">
                 <div class="MenuBox" id="one">
                     <h1>Economic Geology</h1>
+                    <img src="{{ url_for('static',filename='images/seg.png') }}" alt="SEG">
                 </div>
             </a>  
             <a href="">
                 <div class="MenuBox" id="two">
                     <h1>Foreign Languages</h1>
+                    <img src="{{ url_for('static',filename='images/mfl.png') }}" alt="Foreign languages">
                 </div>
             </a>  
             <a href="">
                 <div class="MenuBox" id="three">
                     <h1>Team environments</h1>
+                    <img src="{{ url_for('static',filename='images/team.png') }}" alt="Programming">
                 </div>
             </a>  
          </div>
@@ -27,17 +30,19 @@
             <a href="">
                 <div class="MenuBox" id="four">
                     <h1>Graphic Design</h1>
+                    <img src="{{ url_for('static',filename='images/gd.png') }}" alt="Graphics">
                 </div>
             </a>  
             <a href="">
                 <div class="MenuBox" id="five">
                     <h1>Programming</h1>
-                    <img src="{{ url_for('static',filename='images/phone.png') }}" alt="Call me!">
+                    <img src="{{ url_for('static',filename='images/prg.png') }}" alt="Programming">
                 </div>
             </a>  
             <a href="">
                 <div class="MenuBox" id="six">
                     <h1>Travel</h1>
+                    <img src="{{ url_for('static',filename='images/travel.png') }}" alt="Travel">
                 </div>
             </a>  
          </div>
