--- a/templates/about.html
+++ b/templates/about.html
@@ -1,5 +1,5 @@
 {% include 'base.html' %}
-<body onload="color.js">
+<body>
     <div id="page">
         <div id="container">
             <span id="text1"></span>
@@ -46,6 +46,27 @@
                 </div>
             </a>  
          </div>
+        <div id="who">
+            <div id="whohead">
+                <h1>Who am I?</h1>
+            </div>
+            <div id="whop">
+                <p1>Growing up in Somerset I had the chance to visit many sites along the Jurassic Coast. During this time I developed a keen interest in fossil hunting, despite never finding much of value. 
+                    Seeing these fossilised animals and wondering how they lived stuck with me. Paired with my Grandpa's rock collection and travel tapes, this led to a fascination with how things worked all around the world and a desire to understand science.
+                </p1>
+            </div>
+            <div id="lyme">
+                
+            </div>
+            <div id="interests">
+                <div id="interestshead">
+                    <h1>Current interests</h1>
+                </div>
+                <div id="interestsbody">
+                    <p1>volcanoes, computers, travel and languages</p1>
+                </div>
+            </div>
+        </div>
     </div>
     <svg id="filters">
         <defs>
@@ -62,7 +83,7 @@
 
 
 
-    // <!-- <script type="text/javascript">
+    <!-- <script type="text/javascript">
     //     const buttons = document.querySelectorAll('a');
     //     buttons.forEach(btn => {
     //         btn.addEventListener('mouseenter', function(e){
